Some styling and tweaking with the theme

--- a/layouts/features/list.html
+++ b/layouts/features/list.html
@@ -4,8 +4,8 @@
 {{ define "main" }}
 
 <div id="hero" class="wrap">
-  <h1>Updates from {{.Site.Params.author }}'s Developers</h1>
-    <p>Our vision, news and ideas, and whatever feels important.<br> <!-- <a href="{{.Params.twitter}}">Follow us on Twitter</a></p> --></p>
+  <h1>{{.Site.Params.author }} Feature Announcements</h1>
+    <p>If it's new and exciting, you'll find it here.<br> <!-- <a href="{{.Params.twitter}}">Follow us on Twitter</a></p> --></p>
 
 </div>
 
