--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,16 @@
-{{ define "title"}} {{ .Site.Title }} {{end}}
+{{ define "title"}} {{ .Site.Title }}{{end}}
 {{ define "header"}} {{ partial "header" .}} {{end}}
 {{ define "main"}}
 
 <div id="main">
   <div id="hero">
     <h1>{{.Title}}</h1>
-    <p>{{.Description}}</p>
+    <p>New feature announcements, insights into our development process, and more from the Crunch.io dev team</p>
   </div>
-  <!-- <div id="action-buttons">
+  <ul id="posts">
+   {{ range .Paginator.Pages.ByWeight }} {{ partial "page-summary" . }} {{ end }}
+    <section>{{ partial "pagination" .}}</section>
+  </ul>  <!-- <div id="action-buttons">
     <a class="button primary big" href="https://github.com/jeblister/kube/releases/tag/v1.0.1" onclick="_gaq.push(['_trackEvent', 'kube', 'download', '1.0']);">Download</a> <a class="button outline big" href="https://github.com/jeblister/kube" onclick="_gaq.push(['_trackEvent', 'kube', 'github', '1.0.0']);">View on Github</a>
     <p>Version 1.0.0 from Abril 13, 2017.<br>
     Zip-archive, includes all the source and site example files</p>
