--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,8 +4,8 @@
 {{ define "main" }}
 
 <div id="hero" class="wrap">
-  <h1>Updates from {{.Site.Params.author }}'s Developers</h1>
-    <p>Our vision, news and ideas, and whatever feels important.<br> <!-- <a href="{{.Params.twitter}}">Follow us on Twitter</a></p> --></p>
+    <h1>{{.Title}}</h1>
+    <p>New feature announcements, insights into our development process, and more from the Crunch.io dev team</p>
 
 </div>
 
