--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -13,12 +13,21 @@
 
 h1.title, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: AvenirLTStd, Lato, sans-serif;
-    color: #444;
+    color: #565656;
     line-height: 1;
     font-weight: 200;
     margin-bottom: 3px;
 }
 
+body {
+    color:#565656;
+    font-family: AvenirLTStd, Lato, sans-serif;
+}
+
+p {
+    margin-bottom: 18px;
+    font-size: 16px;
+}
 #hero {
     text-align: left;
     padding-top:0;
@@ -30,7 +39,8 @@ h1.title, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     line-height: 1.25;
     max-width: 900px;
     margin-bottom: 0;
-    color: #444;
+    color: #565656;
+    font-weight: 200;
 }
 
 #hero p {
@@ -50,7 +60,7 @@ h1.title, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 #posts h2 a {
-    color: #444;
+    color: #565656;
 }
 
 #posts h2 a:hover{
@@ -106,7 +116,9 @@ blockquote[itemprop="description"] {
 
 .h1, h1 {
     font-size: 26px;
-    color: #0064a4;
+    color: #565656;
+    font-weight: 700;
+    padding-top: 9px;
 }
 .h2, h2 {
     font-size: 22px;
@@ -119,10 +131,14 @@ blockquote[itemprop="description"] {
 .h4, h4 {
     font-size: 16px;
     color: #888;
+    font-weight: bold;
 }
 
+p+h2, p+h3, p+h4 {
+    margin-top: 0;}
+
 #post {
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.5;
 }
 
