Rework the tab book post some

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
       <ul>
         <li><span>Crunch.io</span></li>
         <li>
-          <a href="/">Company</a>
+          <a href="http://crunch.io/">Company</a>
         </li>
         <li>
           <a href="/blog/">Blog</a>
