--- a/layouts/features/single.html
+++ b/layouts/features/single.html
@@ -18,9 +18,10 @@
 
 </div>
 
+<!-- TODO: implement such a form/mailing list
 <div class="form-subscribe">
     <div id="form-subscribe-success" style="display: none;"></div>
-<div id="form-subscribe-box">
+    <div id="form-subscribe-box">
         <h4>Want to stay up-to-date?</h4>
         <p>Sign up to get periodic updates from Crunch.</p>
 
@@ -31,15 +32,16 @@
                     <input type="email" name="EMAIL" id="mce-EMAIL" placeholder="Email">
                     <button class="button">Subscribe</button>
                 </div>
-            </div>
+            </div> -->
 
             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="" tabindex="-1" value=""></div>
-        </form>
+            <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="" tabindex="-1" value=""></div>
+        </form> -->
 
         <!-- <div class="form-subscribe-twitter"><div>or</div> <a href="http://twitter.com/jebli_7">Follow us on Twitter</a></div> -->
-    </div>
+    <!-- </div>
 </div>
+END TODO -->
 
     <div class="">
         {{ partial "post/byauthor" . }}
