--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -16,7 +16,9 @@ h1.title, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     color: #565656;
     line-height: 1;
     font-weight: 200;
-    margin-bottom: 3px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    clear: both;
 }
 
 body {
@@ -25,8 +27,12 @@ body {
 }
 
 p {
-    margin-bottom: 18px;
+    margin-bottom: 24px;
     font-size: 16px;
+}
+
+a {
+    color: #0064a4;
 }
 #hero {
     text-align: left;
@@ -145,4 +151,16 @@ p+h2, p+h3, p+h4 {
 #post img {
     padding: 6px 0;
     display:block;
+}
+
+.floating-right {
+    float: right;
+}
+
+.floating-left {
+    float: left;
+}
+
+.centered-image {
+    margin: 0 auto;
 }
