Some template tweaks; hiding one blog post, preparing other

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -4,7 +4,7 @@
 {{ define "main" }}
 
 <div id="hero" class="wrap">
-  <h1>Blog Posts</h1>
+  <h1>The Dev Blog</h1>
     <p>Bits and pieces about how we make Crunch happen<br> <!-- <a href="{{.Params.twitter}}">Follow us on Twitter</a></p> --></p>
 
 </div>
