--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,11 @@
-<div class="show-sm">
+<div class="show-sm navbar navbar-default">
     <div id="nav-toggle-box">
       <div id="nav-toggle-brand">
         <a href="http://crunch.io/"><img src="../../crunch_logo.png"></img></a>
       </div><a data-component="toggleme" data-target="#top" href="#" id="nav-toggle"><i class="kube-menu"></i></a>
     </div>
   </div>
-  <div class="hide-sm" id="top">
+  <div class="hide-sm navbar navbar-default" id="top">
     <div id="top-brand">
         <a href="http://crunch.io/"><img src="../../crunch_logo.png"></img></a>
     </div>
@@ -18,10 +18,25 @@
       </ul>
     </nav>
     <nav id="top-nav-extra">
-      <ul>
-        <li>
-          <a href="https://app.crunch.io/">Sign in</a>
-        </li>
-      </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a class="page-scroll" href="/#product">Product</a>
+            </li>
+            <li>
+                <a href="/team">Team</a>
+            </li>
+            <li>
+                <a href="/jobs">Jobs</a>
+            </li>
+            <li>
+                <a href="/dev">Blog</a>
+            </li>
+            <li>
+                <a href="http://support.crunch.io/">Support</a>
+            </li>
+            <li>
+                <a href="http://app.crunch.io/">Sign in</a>
+            </li>
+        </ul>
     </nav>
   </div>
