--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -179,6 +179,7 @@ p+h2, p+h3, p+h4 {
     border: none;
     text-transform: uppercase;
     color: #888;
+    letter-spacing: 2px;
 }
 
 #top #top-nav-extra span:hover, #top #top-nav-extra a:hover {
@@ -203,4 +204,8 @@ p+h2, p+h3, p+h4 {
 
 blockquote {
     font-style: normal;
+}
+
+.halfwidth {
+    max-width: 450px;
 }
